[package]
name = "actix-surrealdb-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.1", features = ["macros"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
surrealdb = "1.1.0"
thiserror = "1.0.56"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.30"
actix-cors = "0.7.0"
types = { path = "../types" }
once_cell = "1.19.0"
env_logger = "0.10.1"
log = "0.4.20"
