[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
chrono = { version = "0.4.31", features = ["serde"] }
